// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "və kɪŋ və wʊlf siːz",
    },
    {
      "english": "the dogs see the wolves",
      "target": "və dɔdɔg və wʊwʊlf siː",
    },
    {
      "english": "i give you the bread",
      "target": "aj jʊ gɪvɪŋ",
    },
    {
      "english": "the king walks at the river",
      "target": "və kɪŋ və rɪvər æ wɔkɪŋz",
    },
    {
      "english": "the king does not see the wolf",
      "target": "və kɪŋ və wʊlf nat siːz",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "reːge βideːret luːpuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kaːne βideːrent luːpuum",
    },
    {
      "english": "i give you the bread",
      "target": "eːgo daːreo tuːum",
    },
    {
      "english": "the king walks at the river",
      "target": "reːge ambulaːret fluːme",
    },
    {
      "english": "the king does not see the wolf",
      "target": "reːge non βideːret luːpuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "nutin esewi esoweni",
    },
    {
      "english": "the dogs see the wolves",
      "target": "nutin esosoweni esosoweni",
    },
    {
      "english": "i give you the bread",
      "target": "fana mi sina",
    },
    {
      "english": "the king walks at the river",
      "target": "tawa esewi saθi eteno",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ana nutin esewi esoweni",
    },
  ],
  "preset": "tokipona",
}
`;
